@@ -67,8 +67,6 @@ import org.elasticsearch.script.ScriptException;
 import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.commons.Method;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.BitSet;
 import java.util.Collections;
 import java.util.List;
@@ -134,18 +132,14 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
                 irBlockNode.addStatementNode(irReturnNode);
             }
 
-            List<String> parameterNames = new ArrayList<>(scriptClassInfo.getExecuteArguments().size());
-
-            for (MethodArgument methodArgument : scriptClassInfo.getExecuteArguments()) {
-                parameterNames.add(methodArgument.getName());
-            }
+            List<String> parameterNames = scriptClassInfo.getExecuteArguments().stream().map(MethodArgument::name).toList();
 
             FunctionNode irFunctionNode = new FunctionNode(userFunctionNode.getLocation());
             irFunctionNode.setBlockNode(irBlockNode);
             irFunctionNode.attachDecoration(new IRDName("execute"));
             irFunctionNode.attachDecoration(new IRDReturnType(returnType));
-            irFunctionNode.attachDecoration(new IRDTypeParameters(new ArrayList<>(localFunction.getTypeParameters())));
-            irFunctionNode.attachDecoration(new IRDParameterNames(new ArrayList<>(parameterNames)));
+            irFunctionNode.attachDecoration(new IRDTypeParameters(localFunction.getTypeParameters()));
+            irFunctionNode.attachDecoration(new IRDParameterNames(parameterNames));
             irFunctionNode.attachDecoration(new IRDMaxLoopCounter(scriptScope.getCompilerSettings().getMaxLoopCounter()));
 
             injectStaticFieldsAndGetters();
@@ -188,8 +182,8 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
         FunctionNode irFunctionNode = new FunctionNode(internalLocation);
         irFunctionNode.attachDecoration(new IRDName("getName"));
         irFunctionNode.attachDecoration(new IRDReturnType(String.class));
-        irFunctionNode.attachDecoration(new IRDTypeParameters(Collections.emptyList()));
-        irFunctionNode.attachDecoration(new IRDParameterNames(Collections.emptyList()));
+        irFunctionNode.attachDecoration(new IRDTypeParameters(List.of()));
+        irFunctionNode.attachDecoration(new IRDParameterNames(List.of()));
         irFunctionNode.attachCondition(IRCSynthetic.class);
         irFunctionNode.attachDecoration(new IRDMaxLoopCounter(0));
 
@@ -214,8 +208,8 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
         irFunctionNode = new FunctionNode(internalLocation);
         irFunctionNode.attachDecoration(new IRDName("getSource"));
         irFunctionNode.attachDecoration(new IRDReturnType(String.class));
-        irFunctionNode.attachDecoration(new IRDTypeParameters(Collections.emptyList()));
-        irFunctionNode.attachDecoration(new IRDParameterNames(Collections.emptyList()));
+        irFunctionNode.attachDecoration(new IRDTypeParameters(List.of()));
+        irFunctionNode.attachDecoration(new IRDParameterNames(List.of()));
         irFunctionNode.attachCondition(IRCSynthetic.class);
         irFunctionNode.attachDecoration(new IRDMaxLoopCounter(0));
 
@@ -240,8 +234,8 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
         irFunctionNode = new FunctionNode(internalLocation);
         irFunctionNode.attachDecoration(new IRDName("getStatements"));
         irFunctionNode.attachDecoration(new IRDReturnType(BitSet.class));
-        irFunctionNode.attachDecoration(new IRDTypeParameters(Collections.emptyList()));
-        irFunctionNode.attachDecoration(new IRDParameterNames(Collections.emptyList()));
+        irFunctionNode.attachDecoration(new IRDTypeParameters(List.of()));
+        irFunctionNode.attachDecoration(new IRDParameterNames(List.of()));
         irFunctionNode.attachCondition(IRCSynthetic.class);
         irFunctionNode.attachDecoration(new IRDMaxLoopCounter(0));
 
@@ -287,7 +281,7 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
                 InvokeCallMemberNode irInvokeCallMemberNode = new InvokeCallMemberNode(internalLocation);
                 irInvokeCallMemberNode.attachDecoration(new IRDExpressionType(returnType));
                 irInvokeCallMemberNode.attachDecoration(
-                    new IRDFunction(new LocalFunction(getMethod.getName(), returnType, Collections.emptyList(), true, false))
+                    new IRDFunction(new LocalFunction(getMethod.getName(), returnType, List.of(), true, false))
                 );
                 irDeclarationNode.setExpressionNode(irInvokeCallMemberNode);
             }
@@ -306,8 +300,8 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
             FunctionNode irFunctionNode = new FunctionNode(internalLocation);
             irFunctionNode.attachDecoration(new IRDName(needsMethod.getName()));
             irFunctionNode.attachDecoration(new IRDReturnType(boolean.class));
-            irFunctionNode.attachDecoration(new IRDTypeParameters(Collections.emptyList()));
-            irFunctionNode.attachDecoration(new IRDParameterNames(Collections.emptyList()));
+            irFunctionNode.attachDecoration(new IRDTypeParameters(List.of()));
+            irFunctionNode.attachDecoration(new IRDParameterNames(List.of()));
             irFunctionNode.attachCondition(IRCSynthetic.class);
             irFunctionNode.attachDecoration(new IRDMaxLoopCounter(0));
 
@@ -340,6 +334,12 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
      *
      * and
      *
+     * } catch (SecurityException e) {
+     *     throw e;
+     * }
+     *
+     * and
+     *
      * } catch (PainlessError | LinkageError | OutOfMemoryError | StackOverflowError | Exception e) {
      *     throw this.convertToScriptException(e, e.getHeaders())
      * }
@@ -353,32 +353,13 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
             TryNode irTryNode = new TryNode(internalLocation);
             irTryNode.setBlockNode(irBlockNode);
 
-            CatchNode irCatchNode = new CatchNode(internalLocation);
-            irCatchNode.attachDecoration(new IRDExceptionType(PainlessExplainError.class));
-            irCatchNode.attachDecoration(new IRDSymbol("#painlessExplainError"));
-
-            irTryNode.addCatchNode(irCatchNode);
-
-            BlockNode irCatchBlockNode = new BlockNode(internalLocation);
-            irCatchBlockNode.attachCondition(IRCAllEscape.class);
-
-            irCatchNode.setBlockNode(irCatchBlockNode);
-
-            ThrowNode irThrowNode = new ThrowNode(internalLocation);
-
-            irCatchBlockNode.addStatementNode(irThrowNode);
+            ThrowNode irThrowNode = createCatchAndThrow(PainlessExplainError.class, internalLocation, irTryNode);
 
             InvokeCallMemberNode irInvokeCallMemberNode = new InvokeCallMemberNode(internalLocation);
             irInvokeCallMemberNode.attachDecoration(new IRDExpressionType(ScriptException.class));
             irInvokeCallMemberNode.attachDecoration(
                 new IRDFunction(
-                    new LocalFunction(
-                        "convertToScriptException",
-                        ScriptException.class,
-                        Arrays.asList(Throwable.class, Map.class),
-                        true,
-                        false
-                    )
+                    new LocalFunction("convertToScriptException", ScriptException.class, List.of(Throwable.class, Map.class), true, false)
                 )
             );
 
@@ -409,10 +390,10 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
                     PainlessExplainError.class.getMethod("getHeaders", PainlessLookup.class),
                     PainlessExplainError.class,
                     null,
-                    Collections.emptyList(),
+                    List.of(),
                     null,
                     null,
-                    null
+                    Map.of()
                 )
             );
 
@@ -425,30 +406,21 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
 
             irInvokeCallNode.addArgumentNode(irLoadFieldMemberNode);
 
-            for (Class<?> throwable : new Class<?>[] {
+            irThrowNode = createCatchAndThrow(SecurityException.class, internalLocation, irTryNode);
+            irLoadVariableNode = new LoadVariableNode(internalLocation);
+            irLoadVariableNode.attachDecoration(new IRDExpressionType(SecurityException.class));
+            irLoadVariableNode.attachDecoration(new IRDName(getExceptionVariableName(SecurityException.class)));
+            irThrowNode.setExpressionNode(irLoadVariableNode);
+
+            for (Class<? extends Throwable> throwable : List.of(
                 PainlessError.class,
                 LinkageError.class,
                 OutOfMemoryError.class,
                 StackOverflowError.class,
-                Exception.class }) {
+                Exception.class
+            )) {
 
-                String name = throwable.getSimpleName();
-                name = "#" + Character.toLowerCase(name.charAt(0)) + name.substring(1);
-
-                irCatchNode = new CatchNode(internalLocation);
-                irCatchNode.attachDecoration(new IRDExceptionType(throwable));
-                irCatchNode.attachDecoration(new IRDSymbol(name));
-
-                irTryNode.addCatchNode(irCatchNode);
-
-                irCatchBlockNode = new BlockNode(internalLocation);
-                irCatchBlockNode.attachCondition(IRCAllEscape.class);
-
-                irCatchNode.setBlockNode(irCatchBlockNode);
-
-                irThrowNode = new ThrowNode(internalLocation);
-
-                irCatchBlockNode.addStatementNode(irThrowNode);
+                irThrowNode = createCatchAndThrow(throwable, internalLocation, irTryNode);
 
                 irInvokeCallMemberNode = new InvokeCallMemberNode(internalLocation);
                 irInvokeCallMemberNode.attachDecoration(new IRDExpressionType(ScriptException.class));
@@ -457,7 +429,7 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
                         new LocalFunction(
                             "convertToScriptException",
                             ScriptException.class,
-                            Arrays.asList(Throwable.class, Map.class),
+                            List.of(Throwable.class, Map.class),
                             true,
                             false
                         )
@@ -468,7 +440,7 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
 
                 irLoadVariableNode = new LoadVariableNode(internalLocation);
                 irLoadVariableNode.attachDecoration(new IRDExpressionType(ScriptException.class));
-                irLoadVariableNode.attachDecoration(new IRDName(name));
+                irLoadVariableNode.attachDecoration(new IRDName(getExceptionVariableName(throwable)));
 
                 irInvokeCallMemberNode.addArgumentNode(irLoadVariableNode);
 
@@ -486,15 +458,7 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
                 irInvokeCallNode.attachDecoration(new IRDExpressionType(Map.class));
                 irInvokeCallNode.setBox(Collections.class);
                 irInvokeCallNode.setMethod(
-                    new PainlessMethod(
-                        Collections.class.getMethod("emptyMap"),
-                        Collections.class,
-                        null,
-                        Collections.emptyList(),
-                        null,
-                        null,
-                        null
-                    )
+                    new PainlessMethod(Collections.class.getMethod("emptyMap"), Collections.class, null, List.of(), null, null, Map.of())
                 );
 
                 irBinaryImplNode.setRightNode(irInvokeCallNode);
@@ -508,6 +472,32 @@ public class PainlessUserTreeToIRTreePhase extends DefaultUserTreeToIRTreePhase 
         } catch (Exception exception) {
             throw new RuntimeException(exception);
         }
+    }
+
+    // Turn an exception class name into a local variable name to hold an object of that type
+    private static String getExceptionVariableName(Class<? extends Throwable> throwable) {
+        String name = throwable.getSimpleName();
+        return "#" + Character.toLowerCase(name.charAt(0)) + name.substring(1);
+    }
+
+    // Helper for catching a known exception type. Returns the ThrowNode to be filled in.
+    private static ThrowNode createCatchAndThrow(Class<? extends Throwable> throwable, Location internalLocation, TryNode irTryNode) {
+        String name = getExceptionVariableName(throwable);
+
+        CatchNode irCatchNode = new CatchNode(internalLocation);
+        irCatchNode.attachDecoration(new IRDExceptionType(throwable));
+        irCatchNode.attachDecoration(new IRDSymbol(name));
+
+        irTryNode.addCatchNode(irCatchNode);
+
+        BlockNode irCatchBlockNode = new BlockNode(internalLocation);
+        irCatchBlockNode.attachCondition(IRCAllEscape.class);
+
+        irCatchNode.setBlockNode(irCatchBlockNode);
+        ThrowNode irThrowNode = new ThrowNode(internalLocation);
+        irCatchBlockNode.addStatementNode(irThrowNode);
+
+        return irThrowNode;
     }
 
     @Override
