@@ -63,7 +63,8 @@ public interface RuntimeField extends ToXContentFragment {
         protected abstract RuntimeField createChildRuntimeField(
             MappingParserContext parserContext,
             String parentName,
-            Function<SearchLookup, CompositeFieldScript.LeafFactory> parentScriptFactory
+            Function<SearchLookup, CompositeFieldScript.LeafFactory> parentScriptFactory,
+            OnScriptError onScriptError
         );
 
         public final void parse(String name, MappingParserContext parserContext, Map<String, Object> fieldNode) {
@@ -162,7 +163,7 @@ public interface RuntimeField extends ToXContentFragment {
                     runtimeFields.put(fieldName, null);
                 } else {
                     throw new MapperParsingException(
-                        "Runtime field [" + fieldName + "] was set to null but its removal is not supported " + "in this context"
+                        "Runtime field [" + fieldName + "] was set to null but its removal is not supported in this context"
                     );
                 }
             } else if (entry.getValue() instanceof Map) {
@@ -208,7 +209,7 @@ public interface RuntimeField extends ToXContentFragment {
                         && (name.startsWith(runtimeField.name() + ".") == false
                             || name.length() > runtimeField.name().length() + 1 == false)
                 )
-                .collect(Collectors.toList());
+                .toList();
             if (names.isEmpty() == false) {
                 throw new IllegalStateException("Found sub-fields with name not belonging to the parent field they are part of " + names);
             }
