@@ -12,8 +12,6 @@ import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.core.Tuple;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.BiConsumer;
@@ -35,13 +33,10 @@ public class CompoundProcessor implements Processor {
     private final List<Processor> onFailureProcessors;
     private final List<Tuple<Processor, IngestMetric>> processorsWithMetrics;
     private final LongSupplier relativeTimeProvider;
+    private final boolean isAsync;
 
-    CompoundProcessor(LongSupplier relativeTimeProvider, Processor... processor) {
-        this(false, Arrays.asList(processor), Collections.emptyList(), relativeTimeProvider);
-    }
-
-    public CompoundProcessor(Processor... processor) {
-        this(false, Arrays.asList(processor), Collections.emptyList());
+    public CompoundProcessor(Processor... processors) {
+        this(false, List.of(processors), List.of());
     }
 
     public CompoundProcessor(boolean ignoreFailure, List<Processor> processors, List<Processor> onFailureProcessors) {
@@ -54,13 +49,12 @@ public class CompoundProcessor implements Processor {
         List<Processor> onFailureProcessors,
         LongSupplier relativeTimeProvider
     ) {
-        super();
         this.ignoreFailure = ignoreFailure;
-        this.processors = processors;
-        this.onFailureProcessors = onFailureProcessors;
+        this.processors = List.copyOf(processors);
+        this.onFailureProcessors = List.copyOf(onFailureProcessors);
         this.relativeTimeProvider = relativeTimeProvider;
-        this.processorsWithMetrics = new ArrayList<>(processors.size());
-        processors.forEach(p -> processorsWithMetrics.add(new Tuple<>(p, new IngestMetric())));
+        this.processorsWithMetrics = processors.stream().map(p -> new Tuple<>(p, new IngestMetric())).toList();
+        this.isAsync = flattenProcessors().stream().anyMatch(Processor::isAsync);
     }
 
     List<Tuple<Processor, IngestMetric>> getProcessorsWithMetrics() {
@@ -104,7 +98,12 @@ public class CompoundProcessor implements Processor {
 
     @Override
     public String getTag() {
-        return "CompoundProcessor-" + flattenProcessors().stream().map(Processor::getTag).collect(Collectors.joining("-"));
+        return "CompoundProcessor-"
+            + flattenProcessors().stream().map(CompoundProcessor::processorDescription).collect(Collectors.joining("-"));
+    }
+
+    private static String processorDescription(Processor p) {
+        return p.getTag() != null ? p.getTag() : p.getType();
     }
 
     @Override
@@ -113,8 +112,26 @@ public class CompoundProcessor implements Processor {
     }
 
     @Override
-    public IngestDocument execute(IngestDocument ingestDocument) throws Exception {
-        throw new UnsupportedOperationException("this method should not get executed");
+    public boolean isAsync() {
+        return isAsync;
+    }
+
+    @Override
+    public IngestDocument execute(IngestDocument document) throws Exception {
+        assert isAsync == false; // must not be executed if there are async processors
+
+        IngestDocument[] docHolder = new IngestDocument[1];
+        Exception[] exHolder = new Exception[1];
+        innerExecute(0, document, (result, e) -> {
+            docHolder[0] = result;
+            exHolder[0] = e;
+        });
+
+        if (exHolder[0] != null) {
+            throw exHolder[0];
+        }
+
+        return docHolder[0];
     }
 
     @Override
@@ -122,44 +139,101 @@ public class CompoundProcessor implements Processor {
         innerExecute(0, ingestDocument, handler);
     }
 
-    void innerExecute(int currentProcessor, IngestDocument ingestDocument, BiConsumer<IngestDocument, Exception> handler) {
-        if (currentProcessor == processorsWithMetrics.size()) {
+    void innerExecute(int currentProcessor, IngestDocument ingestDocument, final BiConsumer<IngestDocument, Exception> handler) {
+        assert currentProcessor <= processorsWithMetrics.size();
+        if (currentProcessor == processorsWithMetrics.size() || ingestDocument.isReroute()) {
             handler.accept(ingestDocument, null);
             return;
         }
 
-        Tuple<Processor, IngestMetric> processorWithMetric = processorsWithMetrics.get(currentProcessor);
-        final Processor processor = processorWithMetric.v1();
-        final IngestMetric metric = processorWithMetric.v2();
-        final long startTimeInNanos = relativeTimeProvider.getAsLong();
-        metric.preIngest();
-        processor.execute(ingestDocument, (result, e) -> {
-            long ingestTimeInNanos = relativeTimeProvider.getAsLong() - startTimeInNanos;
-            metric.postIngest(ingestTimeInNanos);
+        Tuple<Processor, IngestMetric> processorWithMetric;
+        Processor processor;
+        IngestMetric metric;
+        // iteratively execute any sync processors
+        while (currentProcessor < processorsWithMetrics.size()
+            && processorsWithMetrics.get(currentProcessor).v1().isAsync() == false
+            && ingestDocument.isReroute() == false) {
+            processorWithMetric = processorsWithMetrics.get(currentProcessor);
+            processor = processorWithMetric.v1();
+            metric = processorWithMetric.v2();
+            metric.preIngest();
 
-            if (e != null) {
-                metric.ingestFailed();
-                if (ignoreFailure) {
-                    innerExecute(currentProcessor + 1, ingestDocument, handler);
+            final long startTimeInNanos = relativeTimeProvider.getAsLong();
+            try {
+                ingestDocument = processor.execute(ingestDocument);
+                long ingestTimeInNanos = relativeTimeProvider.getAsLong() - startTimeInNanos;
+                metric.postIngest(ingestTimeInNanos);
+                if (ingestDocument == null) {
+                    handler.accept(null, null);
+                    return;
+                }
+            } catch (Exception e) {
+                long ingestTimeInNanos = relativeTimeProvider.getAsLong() - startTimeInNanos;
+                metric.postIngest(ingestTimeInNanos);
+                executeOnFailureOuter(currentProcessor, ingestDocument, handler, processor, metric, e);
+                return;
+            }
+
+            currentProcessor++;
+        }
+
+        assert currentProcessor <= processorsWithMetrics.size();
+        if (currentProcessor == processorsWithMetrics.size() || ingestDocument.isReroute()) {
+            handler.accept(ingestDocument, null);
+            return;
+        }
+
+        // n.b. read 'final' on these variable names as hungarian notation -- we need final variables because of the lambda
+        final int finalCurrentProcessor = currentProcessor;
+        final int nextProcessor = currentProcessor + 1;
+        final long startTimeInNanos = relativeTimeProvider.getAsLong();
+        final IngestMetric finalMetric = processorsWithMetrics.get(currentProcessor).v2();
+        final Processor finalProcessor = processorsWithMetrics.get(currentProcessor).v1();
+        final IngestDocument finalIngestDocument = ingestDocument;
+        finalMetric.preIngest();
+        try {
+            finalProcessor.execute(ingestDocument, (result, e) -> {
+                long ingestTimeInNanos = relativeTimeProvider.getAsLong() - startTimeInNanos;
+                finalMetric.postIngest(ingestTimeInNanos);
+                if (e != null) {
+                    executeOnFailureOuter(finalCurrentProcessor, finalIngestDocument, handler, finalProcessor, finalMetric, e);
                 } else {
-                    IngestProcessorException compoundProcessorException = newCompoundProcessorException(e, processor, ingestDocument);
-                    if (onFailureProcessors.isEmpty()) {
-                        handler.accept(null, compoundProcessorException);
+                    if (result != null) {
+                        innerExecute(nextProcessor, result, handler);
                     } else {
-                        executeOnFailureAsync(0, ingestDocument, compoundProcessorException, handler);
+                        handler.accept(null, null);
                     }
                 }
-            } else {
-                if (result != null) {
-                    innerExecute(currentProcessor + 1, result, handler);
-                } else {
-                    handler.accept(null, null);
-                }
-            }
-        });
+            });
+        } catch (Exception e) {
+            long ingestTimeInNanos = relativeTimeProvider.getAsLong() - startTimeInNanos;
+            finalMetric.postIngest(ingestTimeInNanos);
+            executeOnFailureOuter(finalCurrentProcessor, finalIngestDocument, handler, finalProcessor, finalMetric, e);
+        }
     }
 
-    void executeOnFailureAsync(
+    private void executeOnFailureOuter(
+        int currentProcessor,
+        IngestDocument ingestDocument,
+        BiConsumer<IngestDocument, Exception> handler,
+        Processor processor,
+        IngestMetric metric,
+        Exception e
+    ) {
+        metric.ingestFailed();
+        if (ignoreFailure) {
+            innerExecute(currentProcessor + 1, ingestDocument, handler);
+        } else {
+            IngestProcessorException compoundProcessorException = newCompoundProcessorException(e, processor, ingestDocument);
+            if (onFailureProcessors.isEmpty()) {
+                handler.accept(null, compoundProcessorException);
+            } else {
+                executeOnFailure(0, ingestDocument, compoundProcessorException, handler);
+            }
+        }
+    }
+
+    void executeOnFailure(
         int currentOnFailureProcessor,
         IngestDocument ingestDocument,
         ElasticsearchException exception,
@@ -176,22 +250,40 @@ public class CompoundProcessor implements Processor {
         }
 
         final Processor onFailureProcessor = onFailureProcessors.get(currentOnFailureProcessor);
-        onFailureProcessor.execute(ingestDocument, (result, e) -> {
-            if (e != null) {
-                removeFailureMetadata(ingestDocument);
+        if (onFailureProcessor.isAsync()) {
+            final IngestDocument finalDoc = ingestDocument;
+            onFailureProcessor.execute(finalDoc, (result, e) -> {
+                if (e != null) {
+                    removeFailureMetadata(finalDoc);
+                    handler.accept(null, newCompoundProcessorException(e, onFailureProcessor, finalDoc));
+                    return;
+                }
+                if (result == null) {
+                    removeFailureMetadata(finalDoc);
+                    handler.accept(null, null);
+                    return;
+                }
+                executeOnFailure(currentOnFailureProcessor + 1, finalDoc, exception, handler);
+            });
+        } else {
+            try {
+                ingestDocument = onFailureProcessor.execute(ingestDocument);
+                if (ingestDocument == null) {
+                    handler.accept(null, null);
+                    return;
+                }
+            } catch (Exception e) {
+                if (ingestDocument != null) {
+                    removeFailureMetadata(ingestDocument);
+                }
                 handler.accept(null, newCompoundProcessorException(e, onFailureProcessor, ingestDocument));
                 return;
             }
-            if (result == null) {
-                removeFailureMetadata(ingestDocument);
-                handler.accept(null, null);
-                return;
-            }
-            executeOnFailureAsync(currentOnFailureProcessor + 1, ingestDocument, exception, handler);
-        });
+            executeOnFailure(currentOnFailureProcessor + 1, ingestDocument, exception, handler);
+        }
     }
 
-    private void putFailureMetadata(IngestDocument ingestDocument, ElasticsearchException cause) {
+    private static void putFailureMetadata(IngestDocument ingestDocument, ElasticsearchException cause) {
         List<String> processorTypeHeader = cause.getHeader("processor_type");
         List<String> processorTagHeader = cause.getHeader("processor_tag");
         List<String> processorOriginHeader = cause.getHeader("pipeline_origin");
@@ -207,7 +299,7 @@ public class CompoundProcessor implements Processor {
         }
     }
 
-    private void removeFailureMetadata(IngestDocument ingestDocument) {
+    private static void removeFailureMetadata(IngestDocument ingestDocument) {
         Map<String, Object> ingestMetadata = ingestDocument.getIngestMetadata();
         ingestMetadata.remove(ON_FAILURE_MESSAGE_FIELD);
         ingestMetadata.remove(ON_FAILURE_PROCESSOR_TYPE_FIELD);
@@ -230,9 +322,11 @@ public class CompoundProcessor implements Processor {
         if (processorTag != null) {
             exception.addHeader("processor_tag", processorTag);
         }
-        List<String> pipelineStack = document.getPipelineStack();
-        if (pipelineStack.size() > 1) {
-            exception.addHeader("pipeline_origin", pipelineStack);
+        if (document != null) {
+            List<String> pipelineStack = document.getPipelineStack();
+            if (pipelineStack.isEmpty() == false) {
+                exception.addHeader("pipeline_origin", pipelineStack);
+            }
         }
 
         return exception;
