@@ -27,13 +27,11 @@ import org.elasticsearch.index.shard.ShardPath;
 import org.elasticsearch.index.store.StoreStats;
 import org.elasticsearch.test.AbstractWireSerializingTestCase;
 
-import java.io.IOException;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.equalTo;
@@ -53,7 +51,7 @@ public class VersionStatsTests extends AbstractWireSerializingTestCase<VersionSt
     }
 
     @Override
-    protected VersionStats mutateInstance(VersionStats instance) throws IOException {
+    protected VersionStats mutateInstance(VersionStats instance) {
         return new VersionStats(instance.versionStats().stream().map(svs -> {
             return switch (randomIntBetween(1, 4)) {
                 case 1 -> new VersionStats.SingleVersionStats(
@@ -82,7 +80,7 @@ public class VersionStatsTests extends AbstractWireSerializingTestCase<VersionSt
                 );
                 default -> throw new IllegalArgumentException("unexpected branch");
             };
-        }).collect(Collectors.toList()));
+        }).toList());
     }
 
     public void testCreation() {
@@ -104,8 +102,9 @@ public class VersionStatsTests extends AbstractWireSerializingTestCase<VersionSt
         ShardRouting shardRouting = ShardRouting.newUnassigned(
             shardId,
             true,
-            RecoverySource.PeerRecoverySource.INSTANCE,
-            new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, "message")
+            RecoverySource.EmptyStoreRecoverySource.INSTANCE,
+            new UnassignedInfo(UnassignedInfo.Reason.INDEX_CREATED, "message"),
+            ShardRouting.Role.DEFAULT
         );
         Path path = createTempDir().resolve("indices")
             .resolve(shardRouting.shardId().getIndex().getUUID())
@@ -116,7 +115,7 @@ public class VersionStatsTests extends AbstractWireSerializingTestCase<VersionSt
         ShardStats shardStats = new ShardStats(
             shardRouting,
             new ShardPath(false, path, path, shardRouting.shardId()),
-            new CommonStats(null, indexShard, new CommonStatsFlags(CommonStatsFlags.Flag.Store)),
+            CommonStats.getShardLevelStats(null, indexShard, new CommonStatsFlags(CommonStatsFlags.Flag.Store)),
             null,
             null,
             null
@@ -126,7 +125,8 @@ public class VersionStatsTests extends AbstractWireSerializingTestCase<VersionSt
             ClusterHealthStatus.GREEN,
             null,
             null,
-            new ShardStats[] { shardStats }
+            new ShardStats[] { shardStats },
+            null
         );
 
         stats = VersionStats.of(metadata, Collections.singletonList(nodeResponse));
