@@ -8,6 +8,8 @@
 
 package org.elasticsearch.search.aggregations.support;
 
+import joptsimple.internal.Strings;
+
 import org.apache.lucene.index.DocValues;
 import org.apache.lucene.index.SortedSetDocValues;
 import org.apache.lucene.util.BytesRef;
@@ -26,17 +28,49 @@ import org.elasticsearch.xcontent.XContentParser;
 import org.elasticsearch.xcontent.XContentType;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.Set;
+import java.util.SortedSet;
 import java.util.TreeSet;
 
+import static org.hamcrest.Matchers.equalTo;
+
 public class IncludeExcludeTests extends ESTestCase {
+
+    public static IncludeExclude randomIncludeExclude() {
+        switch (randomInt(7)) {
+            case 0:
+                return new IncludeExclude("incl*de", null, null, null);
+            case 1:
+                return new IncludeExclude("incl*de", "excl*de", null, null);
+            case 2:
+                return new IncludeExclude("incl*de", null, null, new TreeSet<>(Set.of(newBytesRef("exclude"))));
+            case 3:
+                return new IncludeExclude(null, "excl*de", null, null);
+            case 4:
+                return new IncludeExclude(null, "excl*de", new TreeSet<>(Set.of(newBytesRef("include"))), null);
+            case 5:
+                return new IncludeExclude(null, null, new TreeSet<>(Set.of(newBytesRef("include"))), null);
+            case 6:
+                return new IncludeExclude(
+                    null,
+                    null,
+                    new TreeSet<>(Set.of(newBytesRef("include"))),
+                    new TreeSet<>(Set.of(newBytesRef("exclude")))
+                );
+            case 7:
+                return new IncludeExclude(null, null, null, new TreeSet<>(Set.of(newBytesRef("exclude"))));
+            default:
+                throw new IllegalArgumentException("got unexpected parameter, expected 0 <= x <= 7");
+        }
+    }
+
     public void testEmptyTermsWithOrds() throws IOException {
-        IncludeExclude inexcl = new IncludeExclude(new TreeSet<>(Collections.singleton(new BytesRef("foo"))), null);
+        IncludeExclude inexcl = new IncludeExclude(null, null, new TreeSet<>(Set.of(new BytesRef("foo"))), null);
         OrdinalsFilter filter = inexcl.convertToOrdinalsFilter(DocValueFormat.RAW);
         LongBitSet acceptedOrds = filter.acceptedGlobalOrdinals(DocValues.emptySortedSet());
         assertEquals(0, acceptedOrds.length());
 
-        inexcl = new IncludeExclude(null, new TreeSet<>(Collections.singleton(new BytesRef("foo"))));
+        inexcl = new IncludeExclude(null, null, null, new TreeSet<>(Set.of(new BytesRef("foo"))));
         filter = inexcl.convertToOrdinalsFilter(DocValueFormat.RAW);
         acceptedOrds = filter.acceptedGlobalOrdinals(DocValues.emptySortedSet());
         assertEquals(0, acceptedOrds.length());
@@ -66,6 +100,11 @@ public class IncludeExcludeTests extends ESTestCase {
             }
 
             @Override
+            public int docValueCount() {
+                return 1;
+            }
+
+            @Override
             public BytesRef lookupOrd(long ord) {
                 assertEquals(0, ord);
                 return value;
@@ -87,8 +126,8 @@ public class IncludeExcludeTests extends ESTestCase {
     }
 
     public void testTermAccept() throws IOException {
-        String[] fooSet = { "foo" };
-        String[] barSet = { "bar" };
+        SortedSet<BytesRef> fooSet = new TreeSet<>(Set.of(new BytesRef("foo")));
+        SortedSet<BytesRef> barSet = new TreeSet<>(Set.of(new BytesRef("bar")));
         String fooRgx = "f.*";
         String barRgx = "b.*";
 
@@ -152,33 +191,33 @@ public class IncludeExcludeTests extends ESTestCase {
     }
 
     public void testExactIncludeValuesEquals() throws IOException {
-        String[] incValues = { "a", "b" };
-        String[] differentIncValues = { "a", "c" };
-        IncludeExclude serialized = serialize(new IncludeExclude(incValues, null), IncludeExclude.INCLUDE_FIELD);
+        SortedSet<BytesRef> incValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("b")));
+        SortedSet<BytesRef> differentIncValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("c")));
+        IncludeExclude serialized = serialize(new IncludeExclude(null, null, incValues, null), IncludeExclude.INCLUDE_FIELD);
         assertFalse(serialized.isPartitionBased());
         assertFalse(serialized.isRegexBased());
 
-        IncludeExclude same = new IncludeExclude(incValues, null);
+        IncludeExclude same = new IncludeExclude(null, null, incValues, null);
         assertEquals(serialized, same);
         assertEquals(serialized.hashCode(), same.hashCode());
 
-        IncludeExclude different = new IncludeExclude(differentIncValues, null);
+        IncludeExclude different = new IncludeExclude(null, null, differentIncValues, null);
         assertFalse(serialized.equals(different));
         assertTrue(serialized.hashCode() != different.hashCode());
     }
 
     public void testExactExcludeValuesEquals() throws IOException {
-        String[] excValues = { "a", "b" };
-        String[] differentExcValues = { "a", "c" };
-        IncludeExclude serialized = serialize(new IncludeExclude(null, excValues), IncludeExclude.EXCLUDE_FIELD);
+        SortedSet<BytesRef> excValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("b")));
+        SortedSet<BytesRef> differentExcValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("c")));
+        IncludeExclude serialized = serialize(new IncludeExclude(null, null, null, excValues), IncludeExclude.EXCLUDE_FIELD);
         assertFalse(serialized.isPartitionBased());
         assertFalse(serialized.isRegexBased());
 
-        IncludeExclude same = new IncludeExclude(null, excValues);
+        IncludeExclude same = new IncludeExclude(null, null, null, excValues);
         assertEquals(serialized, same);
         assertEquals(serialized.hashCode(), same.hashCode());
 
-        IncludeExclude different = new IncludeExclude(null, differentExcValues);
+        IncludeExclude different = new IncludeExclude(null, null, null, differentExcValues);
         assertFalse(serialized.equals(different));
         assertTrue(serialized.hashCode() != different.hashCode());
     }
@@ -186,15 +225,15 @@ public class IncludeExcludeTests extends ESTestCase {
     public void testRegexInclude() throws IOException {
         String incRegex = "foo.*";
         String differentRegex = "bar.*";
-        IncludeExclude serialized = serialize(new IncludeExclude(incRegex, null), IncludeExclude.INCLUDE_FIELD);
+        IncludeExclude serialized = serialize(new IncludeExclude(incRegex, null, null, null), IncludeExclude.INCLUDE_FIELD);
         assertFalse(serialized.isPartitionBased());
         assertTrue(serialized.isRegexBased());
 
-        IncludeExclude same = new IncludeExclude(incRegex, null);
+        IncludeExclude same = new IncludeExclude(incRegex, null, null, null);
         assertEquals(serialized, same);
         assertEquals(serialized.hashCode(), same.hashCode());
 
-        IncludeExclude different = new IncludeExclude(differentRegex, null);
+        IncludeExclude different = new IncludeExclude(differentRegex, null, null, null);
         assertFalse(serialized.equals(different));
         assertTrue(serialized.hashCode() != different.hashCode());
     }
@@ -202,15 +241,15 @@ public class IncludeExcludeTests extends ESTestCase {
     public void testRegexExclude() throws IOException {
         String excRegex = "foo.*";
         String differentRegex = "bar.*";
-        IncludeExclude serialized = serialize(new IncludeExclude(null, excRegex), IncludeExclude.EXCLUDE_FIELD);
+        IncludeExclude serialized = serialize(new IncludeExclude(null, excRegex, null, null), IncludeExclude.EXCLUDE_FIELD);
         assertFalse(serialized.isPartitionBased());
         assertTrue(serialized.isRegexBased());
 
-        IncludeExclude same = new IncludeExclude(null, excRegex);
+        IncludeExclude same = new IncludeExclude(null, excRegex, null, null);
         assertEquals(serialized, same);
         assertEquals(serialized.hashCode(), same.hashCode());
 
-        IncludeExclude different = new IncludeExclude(null, differentRegex);
+        IncludeExclude different = new IncludeExclude(null, differentRegex, null, null);
         assertFalse(serialized.equals(different));
         assertTrue(serialized.hashCode() != different.hashCode());
     }
@@ -247,24 +286,24 @@ public class IncludeExcludeTests extends ESTestCase {
         String incRegex = "foo.*";
         String excRegex = "football";
         String differentExcRegex = "foosball";
-        IncludeExclude serialized = serializeMixedRegex(new IncludeExclude(incRegex, excRegex));
+        IncludeExclude serialized = serializeMixedRegex(new IncludeExclude(incRegex, excRegex, null, null));
         assertFalse(serialized.isPartitionBased());
         assertTrue(serialized.isRegexBased());
 
-        IncludeExclude same = new IncludeExclude(incRegex, excRegex);
+        IncludeExclude same = new IncludeExclude(incRegex, excRegex, null, null);
         assertEquals(serialized, same);
         assertEquals(serialized.hashCode(), same.hashCode());
 
-        IncludeExclude different = new IncludeExclude(incRegex, differentExcRegex);
+        IncludeExclude different = new IncludeExclude(incRegex, differentExcRegex, null, null);
         assertFalse(serialized.equals(different));
         assertTrue(serialized.hashCode() != different.hashCode());
     }
 
     public void testRegexIncludeAndSetExclude() throws IOException {
         String incRegex = "foo.*";
-        String[] excValues = { "a", "b" };
+        SortedSet<BytesRef> excValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("b")));
         String differentIncRegex = "foosball";
-        String[] differentExcValues = { "a", "c" };
+        SortedSet<BytesRef> differentExcValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("c")));
 
         IncludeExclude serialized = serializeMixedRegex(new IncludeExclude(incRegex, null, null, excValues));
         assertFalse(serialized.isPartitionBased());
@@ -284,9 +323,9 @@ public class IncludeExcludeTests extends ESTestCase {
     }
 
     public void testSetIncludeAndRegexExclude() throws IOException {
-        String[] incValues = { "a", "b" };
+        SortedSet<BytesRef> incValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("b")));
         String excRegex = "foo.*";
-        String[] differentIncValues = { "a", "c" };
+        SortedSet<BytesRef> differentIncValues = new TreeSet<>(Set.of(new BytesRef("a"), new BytesRef("c")));
         String differentExcRegex = "foosball";
 
         IncludeExclude serialized = serializeMixedRegex(new IncludeExclude(null, excRegex, incValues, null));
@@ -343,11 +382,17 @@ public class IncludeExcludeTests extends ESTestCase {
     }
 
     public void testInvalidIncludeExcludeCombination() {
-        String[] values = { "foo" };
+        SortedSet<BytesRef> values = new TreeSet<>(Set.of(new BytesRef("foo")));
         String regex = "foo";
 
         expectThrows(IllegalArgumentException.class, () -> new IncludeExclude((String) null, null, null, null));
         expectThrows(IllegalArgumentException.class, () -> new IncludeExclude(regex, null, values, null));
         expectThrows(IllegalArgumentException.class, () -> new IncludeExclude(null, regex, null, values));
+    }
+
+    public void testLongIncludeExclude() {
+        String longString = Strings.repeat('a', 100000);
+        IllegalArgumentException iae = expectThrows(IllegalArgumentException.class, () -> new IncludeExclude(longString, null, null, null));
+        assertThat(iae.getMessage(), equalTo("failed to parse regexp due to stack overflow: " + longString));
     }
 }
